[package]
name = "pool-controller-api"
version = "0.1.0"
edition = "2021"
authors = ["Brent Lemons <brent_lemons@yahoo.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.54.1"
aws-sdk-s3 = "0.24.0"
aws-sdk-iotdataplane = "0.24.0"
aws-types = "0.54.1"
aws-smithy-types = "0.54.4"
lambda_http = "0.7.3"
lambda_runtime = "0.7.3"
serde = "1.0.136"
serde_json = "1.0.85"
structopt = "0.3"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
#tracing = { version = "0.1", features = ["log"] }
#tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }